Updated requirements and readme, added scripts

--- a/main.html
+++ b/main.html
@@ -154,7 +154,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         setHtml("nodesMode", nodesMode);
 
         var simulationSelector = document.getElementById('simulationSelector');
-        var listFile = await loadFileAsync(`${output_path}/list.json`);
+        var listFile = await loadFileAsync(`${output_path}/three_list.json`);
 
         simulationName = listFile.simulations[0];
         animationCount = listFile.steps[0];
